# pocketagent

./: Dockerfile  LICENSE  README.md  md_faiss_meta.json  product_faq.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
faiss_index/: index.faiss  index.pkl
src/: .env  pocketagent_app.py  pocketagent_cli.py
src/a2a/: __main__.py  agent_executor.py  test_client.py
src/api/: index.py
src/mcpserver/: server.py
src/pocketagent/: __init__.py  agents.py  pocketagent_app.py  product_vector_index.py  ragbot.py  router_node.py  smalltalk_node.py  state_types.py  wizardagent.py
src/pocketagent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pocketagent/TravelAgent/: agent.py
src/pocketagent/chatwoot/: actions.py  logstore.py  shopify_router.py
src/pocketagent/mcpagent/: mcpagent.py
src/pocketagent/ragagent/: __init__.py  product_vector_index.py  ragagent.py  ragbot.py
src/pocketagent/returnagent/: wizardagent.py
src/pocketagent/smalltalk_agent/: __init__.py  smalltalk_node.py
src/streamlit/: chatbot.py
